--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,10 @@ services:
   - type: web
     name: ai-for-blind
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "apt-get update && apt-get install -y espeak-ng && pip install -r requirements.txt"
     startCommand: "uvicorn server:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: GEMINI_API_KEY
         sync: false
-      - key: ELEVENLABS_API_KEY
-        sync: false
-      - key: VOICE_ID
-        value: 21m00Tcm4TlvDq8ikWAM
